2002-01-11  Havoc Pennington  <hp@pobox.com>

	* proctable.c (sort_ints): handle case where ints are equal, 
	ensures that we maintain proper semantics for the sort function
	(that if a > b, b < a; if a and b are equal, the return val 
	can't depend on order the args are passed in)

2002-01-19  Kevin Vandersloot <kfv101@psu.edu>

	* infoview.c: don't put command lable in event box

2002-01-19  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: 
	* defaulttable.h:
	use gnome-monitor for the window icon

	* Makefile.am: remove procman.png

2002-01-15  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: call gconftool-2 and remove unneded tab spaces

2002-01-12  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: small fix for the schemas file for making rpms

2002-01-10  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: dist the schemas file

2002-01-07  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: add options to show or not the warning dialogs
	when hiding/killing processes in the prefs dialog. Also some
	ui cleanups of the dialog

2002-01-06  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: save the colors as hex values

	* callbacks.c, procdialogs.c: same here

	* procman.schemas: update to new gconf values. If udating
	make sure to reinstall the schemas file or you are 
	screwed ;)

2002-01-02  Kevin Vandersloot <kfv101@psu.edu>

	* favorites.c: when hiding or reshowing a processes make sure
	to do that on all processes of the same name

	* interface.c: let the devices treeview scroll in the horizontal
	direction

2001-12-30  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: don't remove items from tree that aren't
	visible

2001-12-30  Kevin Vandersloot <kfv101@psu.edu>

	* finish up the gconf stuff

	* procdialog.c: no longer connect to the focus out signal
	for the spin buttons since that seems to be unrelliable. Use
	a button instead

2001-12-30  Kevin Vandersloot <kfv101@psu.edu>

	* clean up gconfclient usage by including the client in