@@ -1,3 +1,9 @@
+2002-01-23  Havoc Pennington  <hp@pobox.com>
+
+	* proctable.c (insert_info_to_tree): always set COL_POINTER first, 
+	so that the sort function will always get a valid pointer 
+	in this column.
+
 2002-01-11  Havoc Pennington  <hp@pobox.com>
 
 	* proctable.c (sort_ints): handle case where ints are equal, 
